@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>506</width>
+    <width>543</width>
     <height>279</height>
    </rect>
   </property>
@@ -260,19 +260,16 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
         <item row="0" column="0" >
          <layout class="QHBoxLayout" name="horizontalLayout_5" >
           <item>
-           <widget class="QLabel" name="label_7" >
+           <widget class="QCheckBox" name="saveasBox" >
             <property name="text" >
              <string>&amp;Save video as:</string>
-            </property>
-            <property name="buddy" >
-             <cstring>saveasEdit</cstring>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QLineEdit" name="saveasEdit" >
             <property name="enabled" >
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="toolTip" >
              <string>Write video to file. Overrides default file naming.</string>
@@ -282,7 +279,7 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
           <item>
            <widget class="QPushButton" name="saveasButton" >
             <property name="enabled" >
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="text" >
              <string>&amp;Browse</string>
@@ -294,6 +291,26 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
         <item row="1" column="0" >
          <layout class="QHBoxLayout" name="horizontalLayout_6" >
           <item>
+           <widget class="QCheckBox" name="titleBox" >
+            <property name="text" >
+             <string>&amp;Use video page title for naming</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_2" >
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
            <widget class="QLabel" name="label_9" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Preferred" hsizetype="Maximum" >
@@ -302,7 +319,7 @@ Example: http://youtube.com/watch?v=3HD220e0bx4</string>
              </sizepolicy>
             </property>
             <property name="text" >
-             <string>&amp;Download Video &amp;Format:</string>
+             <string>Video &amp;Format:</string>
             </property>
             <property name="buddy" >
              <cstring>formatCombo</cstring>
@@ -324,19 +341,6 @@ that some formats may not always be available.</string>
             </property>
            </widget>
           </item>
-          <item>
-           <spacer name="horizontalSpacer_2" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
          </layout>
         </item>
         <item row="2" column="0" >
@@ -349,7 +353,7 @@ that some formats may not always be available.</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0" >
+        <item row="4" column="0" >
          <layout class="QHBoxLayout" name="horizontalLayout_9" >
           <item>
            <widget class="QCheckBox" name="streamBox" >
@@ -407,7 +411,7 @@ video data for the command to process.</string>
           </item>
          </layout>
         </item>
-        <item row="4" column="0" >
+        <item row="5" column="0" >
          <layout class="QHBoxLayout" name="horizontalLayout_7" >
           <item>
            <widget class="QCheckBox" name="commandBox" >
@@ -435,7 +439,7 @@ download finishes.</string>
           </item>
          </layout>
         </item>
-        <item row="5" column="0" >
+        <item row="6" column="0" >
          <spacer name="verticalSpacer_2" >
           <property name="orientation" >
            <enum>Qt::Vertical</enum>
@@ -459,7 +463,7 @@ download finishes.</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>506</width>
+     <width>543</width>
      <height>25</height>
     </rect>
    </property>
@@ -518,17 +522,19 @@ download finishes.</string>
  <tabstops>
   <tabstop>urlEdit</tabstop>
   <tabstop>startButton</tabstop>
-  <tabstop>tabWidget_2</tabstop>
   <tabstop>cancelButton</tabstop>
+  <tabstop>tabWidget_2</tabstop>
   <tabstop>logEdit</tabstop>
-  <tabstop>tabWidget</tabstop>
+  <tabstop>saveasBox</tabstop>
   <tabstop>saveasEdit</tabstop>
   <tabstop>saveasButton</tabstop>
+  <tabstop>titleBox</tabstop>
   <tabstop>formatCombo</tabstop>
   <tabstop>continueBox</tabstop>
   <tabstop>streamBox</tabstop>
   <tabstop>streamSpin</tabstop>
   <tabstop>commandBox</tabstop>
+  <tabstop>tabWidget</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -672,6 +678,22 @@ download finishes.</string>
     </hint>
     <hint type="destinationlabel" >
      <x>253</x>
+     <y>139</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>saveasBox</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onSaveasStateChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>81</x>
+     <y>82</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>271</x>
      <y>139</y>
     </hint>
    </hints>
